Fix: component: BackgroundImage - fixed contrast

--- a/src/styles/components/transitions/Carousel/Carousel.module.scss
+++ b/src/styles/components/transitions/Carousel/Carousel.module.scss
@@ -11,7 +11,7 @@
 	z-index: 1;
 
 	&__item {
-		transition: transform 1s, opacity 1s, width 1s, height 1s;
+		transition: transform 1s, opacity 1s, width 1s, max-width 1s, height 1s;
 
 		&::before {
 			transition: background-color 1s;
